tests/vendor/valid/trivial/nested_unops_2.c
//expect 1
//tags: trivial, unary
int main() {
    return -~0;
}