tests/vendor/invalid/syntax/bad_label.c
//tags: simple, goto
int main() {
    0invalid_label:
        return 0;
}